# Chat-Application

./: Cargo.toml  README.md  chat.db  index.html  out.txt  start.sh
src/: client.rs  crypto.rs  lib.rs  main.rs  models.rs  server.rs  storage.rs
