[package]
name = "chat-application"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "chat-application"
path = "src/main.rs"

[[bin]]
name = "client"
path = "src/bin/client.rs"

[dependencies]
tokio = { version = "1.40", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.32", features = ["bundled"] }
uuid = { version = "1.10", features = ["v4", "serde"] }
dotenv = "0.15"
rocket = { version = "0.5", features = ["json"] }
ring = "0.17"
base64 = "0.22"
log = "0.4"
env_logger = "0.11"
anyhow = "1.0"
chrono = "0.4"
tokio-tungstenite = "0.20"
futures-util = "0.3"